quick dirty update using:  sass-migrator module --migrate-deps

--- a/assets/stylesheets/bootstrap/_breadcrumbs.scss
+++ b/assets/stylesheets/bootstrap/_breadcrumbs.scss
@@ -1,28 +1,30 @@
+@use "variables";
+
 //
 // Breadcrumbs
 // --------------------------------------------------
 
 
 .breadcrumb {
-  padding: $breadcrumb-padding-vertical $breadcrumb-padding-horizontal;
-  margin-bottom: $line-height-computed;
+  padding: variables.$breadcrumb-padding-vertical variables.$breadcrumb-padding-horizontal;
+  margin-bottom: variables.$line-height-computed;
   list-style: none;
-  background-color: $breadcrumb-bg;
-  border-radius: $border-radius-base;
+  background-color: variables.$breadcrumb-bg;
+  border-radius: variables.$border-radius-base;
 
   > li {
     display: inline-block;
 
     + li:before {
       padding: 0 5px;
-      color: $breadcrumb-color;
+      color: variables.$breadcrumb-color;
       // [converter] Workaround for https://github.com/sass/libsass/issues/1115
       $nbsp: "\00a0";
-      content: "#{$breadcrumb-separator}#{$nbsp}"; // Unicode space added since inline-block means non-collapsing white-space
+      content: "#{variables.$breadcrumb-separator}#{$nbsp}"; // Unicode space added since inline-block means non-collapsing white-space
     }
   }
 
   > .active {
-    color: $breadcrumb-active-color;
+    color: variables.$breadcrumb-active-color;
   }
 }
