--- a/assets/stylesheets/bootstrap/_pager.scss
+++ b/assets/stylesheets/bootstrap/_pager.scss
@@ -1,3 +1,6 @@
+@use "mixins/clearfix";
+@use "variables";
+
 //
 // Pager pagination
 // --------------------------------------------------
@@ -5,25 +8,25 @@
 
 .pager {
   padding-left: 0;
-  margin: $line-height-computed 0;
+  margin: variables.$line-height-computed 0;
   text-align: center;
   list-style: none;
-  @include clearfix;
+  @include clearfix.clearfix;
   li {
     display: inline;
     > a,
     > span {
       display: inline-block;
       padding: 5px 14px;
-      background-color: $pager-bg;
-      border: 1px solid $pager-border;
-      border-radius: $pager-border-radius;
+      background-color: variables.$pager-bg;
+      border: 1px solid variables.$pager-border;
+      border-radius: variables.$pager-border-radius;
     }
 
     > a:hover,
     > a:focus {
       text-decoration: none;
-      background-color: $pager-hover-bg;
+      background-color: variables.$pager-hover-bg;
     }
   }
 
@@ -46,9 +49,9 @@
     > a:hover,
     > a:focus,
     > span {
-      color: $pager-disabled-color;
-      cursor: $cursor-disabled;
-      background-color: $pager-bg;
+      color: variables.$pager-disabled-color;
+      cursor: variables.$cursor-disabled;
+      background-color: variables.$pager-bg;
     }
   }
 }
