--- a/assets/stylesheets/bootstrap/_panels.scss
+++ b/assets/stylesheets/bootstrap/_panels.scss
@@ -1,3 +1,10 @@
+@use "sass:math";
+@use "mixins/border-radius";
+@use "mixins/clearfix";
+@use "mixins/panels";
+@use "mixins/vendor-prefixes";
+@use "variables";
+
 //
 // Panels
 // --------------------------------------------------
@@ -5,24 +12,24 @@
 
 // Base class
 .panel {
-  margin-bottom: $line-height-computed;
-  background-color: $panel-bg;
+  margin-bottom: variables.$line-height-computed;
+  background-color: variables.$panel-bg;
   border: 1px solid transparent;
-  border-radius: $panel-border-radius;
-  @include box-shadow(0 1px 1px rgba(0, 0, 0, .05));
+  border-radius: variables.$panel-border-radius;
+  @include vendor-prefixes.box-shadow(0 1px 1px rgba(0, 0, 0, .05));
 }
 
 // Panel contents
 .panel-body {
-  padding: $panel-body-padding;
-  @include clearfix;
+  padding: variables.$panel-body-padding;
+  @include clearfix.clearfix;
 }
 
 // Optional heading
 .panel-heading {
-  padding: $panel-heading-padding;
+  padding: variables.$panel-heading-padding;
   border-bottom: 1px solid transparent;
-  @include border-top-radius(($panel-border-radius - 1));
+  @include border-radius.border-top-radius((variables.$panel-border-radius - 1));
 
   > .dropdown .dropdown-toggle {
     color: inherit;
@@ -33,7 +40,7 @@
 .panel-title {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: ceil(($font-size-base * 1.125));
+  font-size: math.ceil((variables.$font-size-base * 1.125));
   color: inherit;
 
   > a,
@@ -47,10 +54,10 @@
 
 // Optional footer (stays gray in every modifier class)
 .panel-footer {
-  padding: $panel-footer-padding;
-  background-color: $panel-footer-bg;
-  border-top: 1px solid $panel-inner-border;
-  @include border-bottom-radius(($panel-border-radius - 1));
+  padding: variables.$panel-footer-padding;
+  background-color: variables.$panel-footer-bg;
+  border-top: 1px solid variables.$panel-inner-border;
+  @include border-radius.border-bottom-radius((variables.$panel-border-radius - 1));
 }
 
 
@@ -73,7 +80,7 @@
     &:first-child {
       .list-group-item:first-child {
         border-top: 0;
-        @include border-top-radius(($panel-border-radius - 1));
+        @include border-radius.border-top-radius((variables.$panel-border-radius - 1));
       }
     }
 
@@ -81,13 +88,13 @@
     &:last-child {
       .list-group-item:last-child {
         border-bottom: 0;
-        @include border-bottom-radius(($panel-border-radius - 1));
+        @include border-radius.border-bottom-radius((variables.$panel-border-radius - 1));
       }
     }
   }
   > .panel-heading + .panel-collapse > .list-group {
     .list-group-item:first-child {
-      @include border-top-radius(0);
+      @include border-radius.border-top-radius(0);
     }
   }
 }
@@ -113,28 +120,28 @@
     margin-bottom: 0;
 
     caption {
-      padding-right: $panel-body-padding;
-      padding-left: $panel-body-padding;
+      padding-right: variables.$panel-body-padding;
+      padding-left: variables.$panel-body-padding;
     }
   }
   // Add border top radius for first one
   > .table:first-child,
   > .table-responsive:first-child > .table:first-child {
-    @include border-top-radius(($panel-border-radius - 1));
+    @include border-radius.border-top-radius((variables.$panel-border-radius - 1));
 
     > thead:first-child,
     > tbody:first-child {
       > tr:first-child {
-        border-top-left-radius: ($panel-border-radius - 1);
-        border-top-right-radius: ($panel-border-radius - 1);
+        border-top-left-radius: (variables.$panel-border-radius - 1);
+        border-top-right-radius: (variables.$panel-border-radius - 1);
 
         td:first-child,
         th:first-child {
-          border-top-left-radius: ($panel-border-radius - 1);
+          border-top-left-radius: (variables.$panel-border-radius - 1);
         }
         td:last-child,
         th:last-child {
-          border-top-right-radius: ($panel-border-radius - 1);
+          border-top-right-radius: (variables.$panel-border-radius - 1);
         }
       }
     }
@@ -142,21 +149,21 @@
   // Add border bottom radius for last one
   > .table:last-child,
   > .table-responsive:last-child > .table:last-child {
-    @include border-bottom-radius(($panel-border-radius - 1));
+    @include border-radius.border-bottom-radius((variables.$panel-border-radius - 1));
 
     > tbody:last-child,
     > tfoot:last-child {
       > tr:last-child {
-        border-bottom-right-radius: ($panel-border-radius - 1);
-        border-bottom-left-radius: ($panel-border-radius - 1);
+        border-bottom-right-radius: (variables.$panel-border-radius - 1);
+        border-bottom-left-radius: (variables.$panel-border-radius - 1);
 
         td:first-child,
         th:first-child {
-          border-bottom-left-radius: ($panel-border-radius - 1);
+          border-bottom-left-radius: (variables.$panel-border-radius - 1);
         }
         td:last-child,
         th:last-child {
-          border-bottom-right-radius: ($panel-border-radius - 1);
+          border-bottom-right-radius: (variables.$panel-border-radius - 1);
         }
       }
     }
@@ -165,7 +172,7 @@
   > .panel-body + .table-responsive,
   > .table + .panel-body,
   > .table-responsive + .panel-body {
-    border-top: 1px solid $table-border-color;
+    border-top: 1px solid variables.$table-border-color;
   }
   > .table > tbody:first-child > tr:first-child th,
   > .table > tbody:first-child > tr:first-child td {
@@ -220,12 +227,12 @@
 // the help of our collapse JavaScript plugin.
 
 .panel-group {
-  margin-bottom: $line-height-computed;
+  margin-bottom: variables.$line-height-computed;
 
   // Tighten up margin so it's only between panels
   .panel {
     margin-bottom: 0;
-    border-radius: $panel-border-radius;
+    border-radius: variables.$panel-border-radius;
 
     + .panel {
       margin-top: 5px;
@@ -237,14 +244,14 @@
 
     + .panel-collapse > .panel-body,
     + .panel-collapse > .list-group {
-      border-top: 1px solid $panel-inner-border;
+      border-top: 1px solid variables.$panel-inner-border;
     }
   }
 
   .panel-footer {
     border-top: 0;
     + .panel-collapse .panel-body {
-      border-bottom: 1px solid $panel-inner-border;
+      border-bottom: 1px solid variables.$panel-inner-border;
     }
   }
 }
@@ -252,20 +259,20 @@
 
 // Contextual variations
 .panel-default {
-  @include panel-variant($panel-default-border, $panel-default-text, $panel-default-heading-bg, $panel-default-border);
+  @include panels.panel-variant(variables.$panel-default-border, variables.$panel-default-text, variables.$panel-default-heading-bg, variables.$panel-default-border);
 }
 .panel-primary {
-  @include panel-variant($panel-primary-border, $panel-primary-text, $panel-primary-heading-bg, $panel-primary-border);
+  @include panels.panel-variant(variables.$panel-primary-border, variables.$panel-primary-text, variables.$panel-primary-heading-bg, variables.$panel-primary-border);
 }
 .panel-success {
-  @include panel-variant($panel-success-border, $panel-success-text, $panel-success-heading-bg, $panel-success-border);
+  @include panels.panel-variant(variables.$panel-success-border, variables.$panel-success-text, variables.$panel-success-heading-bg, variables.$panel-success-border);
 }
 .panel-info {
-  @include panel-variant($panel-info-border, $panel-info-text, $panel-info-heading-bg, $panel-info-border);
+  @include panels.panel-variant(variables.$panel-info-border, variables.$panel-info-text, variables.$panel-info-heading-bg, variables.$panel-info-border);
 }
 .panel-warning {
-  @include panel-variant($panel-warning-border, $panel-warning-text, $panel-warning-heading-bg, $panel-warning-border);
+  @include panels.panel-variant(variables.$panel-warning-border, variables.$panel-warning-text, variables.$panel-warning-heading-bg, variables.$panel-warning-border);
 }
 .panel-danger {
-  @include panel-variant($panel-danger-border, $panel-danger-text, $panel-danger-heading-bg, $panel-danger-border);
+  @include panels.panel-variant(variables.$panel-danger-border, variables.$panel-danger-text, variables.$panel-danger-heading-bg, variables.$panel-danger-border);
 }
