--- a/assets/stylesheets/bootstrap/_button-groups.scss
+++ b/assets/stylesheets/bootstrap/_button-groups.scss
@@ -1,3 +1,8 @@
+@use "mixins/border-radius";
+@use "mixins/clearfix";
+@use "mixins/vendor-prefixes";
+@use "variables";
+
 //
 // Button groups
 // --------------------------------------------------
@@ -34,7 +39,7 @@
 // Optional: Group multiple button groups together for a toolbar
 .btn-toolbar {
   margin-left: -5px; // Offset the first child's margin
-  @include clearfix;
+  @include clearfix.clearfix;
 
   .btn,
   .btn-group,
@@ -56,13 +61,13 @@
 .btn-group > .btn:first-child {
   margin-left: 0;
   &:not(:last-child):not(.dropdown-toggle) {
-    @include border-right-radius(0);
+    @include border-radius.border-right-radius(0);
   }
 }
 // Need .dropdown-toggle since :last-child doesn't apply, given that a .dropdown-menu is used immediately after it
 .btn-group > .btn:last-child:not(:first-child),
 .btn-group > .dropdown-toggle:not(:first-child) {
-  @include border-left-radius(0);
+  @include border-radius.border-left-radius(0);
 }
 
 // Custom edits for including btn-groups within btn-groups (useful for including dropdown buttons within a btn-group)
@@ -75,11 +80,11 @@
 .btn-group > .btn-group:first-child:not(:last-child) {
   > .btn:last-child,
   > .dropdown-toggle {
-    @include border-right-radius(0);
+    @include border-radius.border-right-radius(0);
   }
 }
 .btn-group > .btn-group:last-child:not(:first-child) > .btn:first-child {
-  @include border-left-radius(0);
+  @include border-radius.border-left-radius(0);
 }
 
 // On active and open, don't show outline
@@ -114,11 +119,11 @@
 // The clickable button for toggling the menu
 // Remove the gradient and set the same inset shadow as the :active state
 .btn-group.open .dropdown-toggle {
-  @include box-shadow(inset 0 3px 5px rgba(0, 0, 0, .125));
+  @include vendor-prefixes.box-shadow(inset 0 3px 5px rgba(0, 0, 0, .125));
 
   // Show no shadow for `.btn-link` since it has no other button styles.
   &.btn-link {
-    @include box-shadow(none);
+    @include vendor-prefixes.box-shadow(none);
   }
 }
 
@@ -129,12 +134,12 @@
 }
 // Carets in other button sizes
 .btn-lg .caret {
-  border-width: $caret-width-large $caret-width-large 0;
+  border-width: variables.$caret-width-large variables.$caret-width-large 0;
   border-bottom-width: 0;
 }
 // Upside down carets for .dropup
 .dropup .btn-lg .caret {
-  border-width: 0 $caret-width-large $caret-width-large;
+  border-width: 0 variables.$caret-width-large variables.$caret-width-large;
 }
 
 
@@ -153,7 +158,7 @@
 
   // Clear floats so dropdown menus can be properly placed
   > .btn-group {
-    @include clearfix;
+    @include clearfix.clearfix;
     > .btn {
       float: none;
     }
@@ -173,12 +178,12 @@
     border-radius: 0;
   }
   &:first-child:not(:last-child) {
-    @include border-top-radius($btn-border-radius-base);
-    @include border-bottom-radius(0);
+    @include border-radius.border-top-radius(variables.$btn-border-radius-base);
+    @include border-radius.border-bottom-radius(0);
   }
   &:last-child:not(:first-child) {
-    @include border-top-radius(0);
-    @include border-bottom-radius($btn-border-radius-base);
+    @include border-radius.border-top-radius(0);
+    @include border-radius.border-bottom-radius(variables.$btn-border-radius-base);
   }
 }
 .btn-group-vertical > .btn-group:not(:first-child):not(:last-child) > .btn {
@@ -187,11 +192,11 @@
 .btn-group-vertical > .btn-group:first-child:not(:last-child) {
   > .btn:last-child,
   > .dropdown-toggle {
-    @include border-bottom-radius(0);
+    @include border-radius.border-bottom-radius(0);
   }
 }
 .btn-group-vertical > .btn-group:last-child:not(:first-child) > .btn:first-child {
-  @include border-top-radius(0);
+  @include border-radius.border-top-radius(0);
 }
 
 
