--- a/assets/stylesheets/bootstrap/_glyphicons.scss
+++ b/assets/stylesheets/bootstrap/_glyphicons.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 //
 // Glyphicons for Bootstrap
 //
@@ -11,12 +13,12 @@
   // Import the fonts
   @font-face {
     font-family: "Glyphicons Halflings";
-    src: url(if($bootstrap-sass-asset-helper, twbs-font-path("#{$icon-font-path}#{$icon-font-name}.eot"), "#{$icon-font-path}#{$icon-font-name}.eot"));
-    src: url(if($bootstrap-sass-asset-helper, twbs-font-path("#{$icon-font-path}#{$icon-font-name}.eot?#iefix"), "#{$icon-font-path}#{$icon-font-name}.eot?#iefix")) format("embedded-opentype"),
-         url(if($bootstrap-sass-asset-helper, twbs-font-path("#{$icon-font-path}#{$icon-font-name}.woff2"), "#{$icon-font-path}#{$icon-font-name}.woff2")) format("woff2"),
-         url(if($bootstrap-sass-asset-helper, twbs-font-path("#{$icon-font-path}#{$icon-font-name}.woff"), "#{$icon-font-path}#{$icon-font-name}.woff")) format("woff"),
-         url(if($bootstrap-sass-asset-helper, twbs-font-path("#{$icon-font-path}#{$icon-font-name}.ttf"), "#{$icon-font-path}#{$icon-font-name}.ttf")) format("truetype"),
-         url(if($bootstrap-sass-asset-helper, twbs-font-path("#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}"), "#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}")) format("svg");
+    src: url(if(variables.$bootstrap-sass-asset-helper, twbs-font-path("#{variables.$icon-font-path}#{variables.$icon-font-name}.eot"), "#{variables.$icon-font-path}#{variables.$icon-font-name}.eot"));
+    src: url(if(variables.$bootstrap-sass-asset-helper, twbs-font-path("#{variables.$icon-font-path}#{variables.$icon-font-name}.eot?#iefix"), "#{variables.$icon-font-path}#{variables.$icon-font-name}.eot?#iefix")) format("embedded-opentype"),
+         url(if(variables.$bootstrap-sass-asset-helper, twbs-font-path("#{variables.$icon-font-path}#{variables.$icon-font-name}.woff2"), "#{variables.$icon-font-path}#{variables.$icon-font-name}.woff2")) format("woff2"),
+         url(if(variables.$bootstrap-sass-asset-helper, twbs-font-path("#{variables.$icon-font-path}#{variables.$icon-font-name}.woff"), "#{variables.$icon-font-path}#{variables.$icon-font-name}.woff")) format("woff"),
+         url(if(variables.$bootstrap-sass-asset-helper, twbs-font-path("#{variables.$icon-font-path}#{variables.$icon-font-name}.ttf"), "#{variables.$icon-font-path}#{variables.$icon-font-name}.ttf")) format("truetype"),
+         url(if(variables.$bootstrap-sass-asset-helper, twbs-font-path("#{variables.$icon-font-path}#{variables.$icon-font-name}.svg##{variables.$icon-font-svg-id}"), "#{variables.$icon-font-path}#{variables.$icon-font-name}.svg##{variables.$icon-font-svg-id}")) format("svg");
   }
 }
 
