--- a/assets/stylesheets/bootstrap/_labels.scss
+++ b/assets/stylesheets/bootstrap/_labels.scss
@@ -1,3 +1,6 @@
+@use "mixins/labels";
+@use "variables";
+
 //
 // Labels
 // --------------------------------------------------
@@ -8,7 +11,7 @@
   font-size: 75%;
   font-weight: 700;
   line-height: 1;
-  color: $label-color;
+  color: variables.$label-color;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
@@ -32,7 +35,7 @@
 a.label {
   &:hover,
   &:focus {
-    color: $label-link-hover-color;
+    color: variables.$label-link-hover-color;
     text-decoration: none;
     cursor: pointer;
   }
@@ -42,25 +45,25 @@ a.label {
 // Contextual variations (linked labels get darker on :hover)
 
 .label-default {
-  @include label-variant($label-default-bg);
+  @include labels.label-variant(variables.$label-default-bg);
 }
 
 .label-primary {
-  @include label-variant($label-primary-bg);
+  @include labels.label-variant(variables.$label-primary-bg);
 }
 
 .label-success {
-  @include label-variant($label-success-bg);
+  @include labels.label-variant(variables.$label-success-bg);
 }
 
 .label-info {
-  @include label-variant($label-info-bg);
+  @include labels.label-variant(variables.$label-info-bg);
 }
 
 .label-warning {
-  @include label-variant($label-warning-bg);
+  @include labels.label-variant(variables.$label-warning-bg);
 }
 
 .label-danger {
-  @include label-variant($label-danger-bg);
+  @include labels.label-variant(variables.$label-danger-bg);
 }
