--- a/assets/stylesheets/bootstrap/_progress-bars.scss
+++ b/assets/stylesheets/bootstrap/_progress-bars.scss
@@ -1,3 +1,8 @@
+@use "mixins/gradients";
+@use "mixins/progress-bar";
+@use "mixins/vendor-prefixes";
+@use "variables";
+
 //
 // Progress bars
 // --------------------------------------------------
@@ -24,12 +29,12 @@
 
 // Outer container
 .progress {
-  height: $line-height-computed;
-  margin-bottom: $line-height-computed;
+  height: variables.$line-height-computed;
+  margin-bottom: variables.$line-height-computed;
   overflow: hidden;
-  background-color: $progress-bg;
-  border-radius: $progress-border-radius;
-  @include box-shadow(inset 0 1px 2px rgba(0, 0, 0, .1));
+  background-color: variables.$progress-bg;
+  border-radius: variables.$progress-border-radius;
+  @include vendor-prefixes.box-shadow(inset 0 1px 2px rgba(0, 0, 0, .1));
 }
 
 // Bar of progress
@@ -37,13 +42,13 @@
   float: left;
   width: 0%;
   height: 100%;
-  font-size: $font-size-small;
-  line-height: $line-height-computed;
-  color: $progress-bar-color;
+  font-size: variables.$font-size-small;
+  line-height: variables.$line-height-computed;
+  color: variables.$progress-bar-color;
   text-align: center;
-  background-color: $progress-bar-bg;
-  @include box-shadow(inset 0 -1px 0 rgba(0, 0, 0, .15));
-  @include transition(width .6s ease);
+  background-color: variables.$progress-bar-bg;
+  @include vendor-prefixes.box-shadow(inset 0 -1px 0 rgba(0, 0, 0, .15));
+  @include vendor-prefixes.transition(width .6s ease);
 }
 
 // Striped bars
@@ -53,7 +58,7 @@
 // `.progress-bar`.
 .progress-striped .progress-bar,
 .progress-bar-striped {
-  @include gradient-striped;
+  @include gradients.gradient-striped;
   background-size: 40px 40px;
 }
 
@@ -63,7 +68,7 @@
 // `.progress-bar.active` approach.
 .progress.active .progress-bar,
 .progress-bar.active {
-  @include animation(progress-bar-stripes 2s linear infinite);
+  @include vendor-prefixes.animation(progress-bar-stripes 2s linear infinite);
 }
 
 
@@ -71,17 +76,17 @@
 // -------------------------
 
 .progress-bar-success {
-  @include progress-bar-variant($progress-bar-success-bg);
+  @include progress-bar.progress-bar-variant(variables.$progress-bar-success-bg);
 }
 
 .progress-bar-info {
-  @include progress-bar-variant($progress-bar-info-bg);
+  @include progress-bar.progress-bar-variant(variables.$progress-bar-info-bg);
 }
 
 .progress-bar-warning {
-  @include progress-bar-variant($progress-bar-warning-bg);
+  @include progress-bar.progress-bar-variant(variables.$progress-bar-warning-bg);
 }
 
 .progress-bar-danger {
-  @include progress-bar-variant($progress-bar-danger-bg);
+  @include progress-bar.progress-bar-variant(variables.$progress-bar-danger-bg);
 }
