--- a/assets/stylesheets/bootstrap/mixins/_nav-divider.scss
+++ b/assets/stylesheets/bootstrap/mixins/_nav-divider.scss
@@ -1,3 +1,5 @@
+@use "../variables";
+
 @use "sass:math";
 // Horizontal dividers
 //
@@ -5,7 +7,7 @@
 
 @mixin nav-divider($color: #e5e5e5) {
   height: 1px;
-  margin: (math.div($line-height-computed, 2) - 1) 0;
+  margin: (math.div(variables.$line-height-computed, 2) - 1) 0;
   overflow: hidden;
   background-color: $color;
 }
